[package]
name = "bacon"
version = "3.15.0"
authors = ["dystroy <denys.seguret@gmail.com>"]
repository = "https://github.com/Canop/bacon"
description = "background rust compiler"
edition = "2021"
keywords = ["rust", "background", "compiler", "watch", "inotify"]
license = "AGPL-3.0"
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
rust-version = "1.76"
        
[features]
default = []
clipboard = ["arboard"]
sound = ["rodio"]

[dependencies]
anyhow = "1.0"
arboard = { version = "3.4", default-features = false, optional = true }
cargo_metadata = "0.19"
clap = { version = "4.5", features = ["derive", "cargo"] }
clap-help = "1.4"
clap_complete = { version = "4.5.44", features = ["unstable-dynamic"] }
cli-log = "2.1"
crokey = "1.2"
ctrlc = "3.4"
directories-next = "2.0.0"
gix = { version = "0.72", default-features = false, features = ["index", "excludes", "parallel"] }
glob = "0.3"
iq = { version = "0.4", features = ["template"] }
lazy-regex = "3.4.1"
notify = "7.0"
paste = "1.0"
rodio = { version = "0.20", optional = true, default-features = false, features = ["mp3"] }
rustc-hash = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termimad = "0.32"
toml = "0.8"
unicode-width = "0.2"
vte = "0.15"

[profile.release]
debug = false
lto = "fat"
strip = "symbols"
codegen-units = 1

[patch.crates-io]
# clap-help = { path = "../clap-help" }
# termimad = { path = "../termimad" }
# crokey = { path = "../crokey" }
# coolor = { path = "../coolor" }
# iq = { path = "../iq" }
# lazy-regex = { path = "../lazy-regex" }
