[package]
name = "bacon"
version = "3.20.2"
authors = ["dystroy <denys.seguret@gmail.com>"]
repository = "https://github.com/Canop/bacon"
description = "background rust compiler"
edition = "2021"
keywords = ["rust", "background", "compiler", "watch", "inotify"]
license = "AGPL-3.0"
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
rust-version = "1.77"

[features]
default = []
clipboard = ["arboard"]
sound = ["rodio"]

[dependencies]
anyhow = "1.0"
arboard = { version = "3.4", default-features = false, optional = true }
cargo_metadata = "0.19"
clap = { version = "4.5", features = ["derive", "cargo"] }
clap-help = "1.5"
clap_complete = { version = "4.5.44", features = ["unstable-dynamic"] }
cli-log = "2.1"
crokey = "1.3"
ctrlc = "3.4"
directories-next = "2.0.0"
gix = { version = "0.73", default-features = false, features = [ "index", "excludes", "parallel" ] }
glob = "0.3"
iq = { version = "0.4", features = ["template"] }
lazy-regex = "3.4.1"
notify = "8.2.0"
paste = "1.0"
pretty_assertions = "1.4"
rodio = { version = "0.21", optional = true, default-features = false, features = [ "mp3", "playback" ] }
rustc-hash = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1"
termimad = "0.34"
toml = "0.9"
unicode-width = "0.2"
vte = "0.15"

[profile.release]
debug = false
lto = "fat"
strip = "symbols"
codegen-units = 1

[patch.crates-io]
# clap-help = { path = "../clap-help" }
# termimad = { path = "../termimad" }
# crokey = { path = "../crokey" }
# coolor = { path = "../coolor" }
# iq = { path = "../iq" }
# lazy-regex = { path = "../lazy-regex" }
